# crypto-qa-challenges

./: .pre-commit-config.yaml  README.md  pyproject.toml
challenges/: .envExample  README.md
challenges/tests/rest_API/: test_get_candlestick.py
challenges/tests/websocket_API/: test_book_instrument_name_depth.py
challenges/utils/common_api/: candlestick_util.py
challenges/utils/common_util/: jsonschema_util.py  websocket_util.py
challenges/utils/pages/: home_page.py
challenges/utils/websocket_api/: book_instrument_depth_util.py
challenges_API/: .envExample  .gitignore  README.md  pyproject.toml  pytest.ini
challenges_API/capture_api/: app.py
challenges_API/schemas/: candlestick.json
challenges_API/tests/: __init__.py  test_get_candlestick.py
challenges_API/tests/hambergur/: test_app_hamberger.py
challenges_API/tests/rest_API/: __init__.py
challenges_API/utils/common_api/: candlestick_steps.py  candlestick_util.py
challenges_API/utils/common_util/: jsonschema_util.py  requests_util.py
challenges_API/utils/pages/: app_init.py  app_setup_page.py  hamburger_list_page.py
challenges_API/utils/websocket_api/: book_instrument_depth_steps.py
challenges_app/: .gitignore
