[tool.poetry]
name = "challenges_api"
version = "0.1.0"
description = ""
authors = ["aiyu666 <zrobin8741@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
curlify = "^2.2.1"
pre-commit = "^2.19.0"
attrs = "^21.4.0"
black = "^22.3.0"
python-dotenv = "^0.20.0"
pytest-html = "^3.1.1"
jsonschema = "^4.5.1"
websocket-client = "^1.3.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
