[tool.poetry]
name = "challenges_api"
version = "0.1.0"
description = ""
authors = ["aiyu666 <zrobin8741@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
requests = "^2.27.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
